# gecko

./: CMakeLists.txt  Makefile  README.md  test.txt
docs/: syntactical_grammer.md
docs/geckolang/: 01_data_types.md  02_expressions.md  03_statements.md  04_variables.md  05_control_flow.md  06_functions.md  about.md
lib/core/: CMakeLists.txt
lib/core/include/: gtype.h
lib/core/src/: gtype.cpp
src/: CMakeLists.txt  errors.cpp  errors.h  m  main.cpp  position.cpp  position.h  source.cpp  source.h
src/internal/: CMakeLists.txt
src/internal/core/: gtype.cpp  gtype.h
src/internal/error/: errors.cpp  errors.h
src/internal/position/: position.cpp  position.h
src/lexer/: CMakeLists.txt  errors.cpp  errors.h  main.cpp  position.cpp  position.h  scanner.cpp  scanner.h  source.cpp  source.h  token.cpp  token.h
src/parser/: CMakeLists.txt  expr.cpp  expr.h  interpreter.cpp  interpreter.h  parser.cpp  parser.h  printer.cpp  printer.h  stmt.h
src/parser/tools/: expr.json  generate_ast.py  stmt.json
